--- a/ad-poject/training.ipynb
+++ b/ad-poject/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fab8b0cc-dc91-4635-8cb5-52e58662c186",
    "metadata": {},
    "outputs": [],
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1d106579",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "EPOCH = 100\n",
     "BATCH_SIZE = 16\n",
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eb6cf9d1",
    "metadata": {},
    "outputs": [],
@@ -64,18 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0501b7d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data size: 6000\n",
+      "Test data size: 3000\n"
+     ]
+    }
+   ],
    "source": [
     "SELECT_NORMAL = 2 # Set 2 class as train dataset.\n",
     "trainset.data = trainset.data[trainset.targets == SELECT_NORMAL]\n",
     "trainset.targets = trainset.targets[trainset.targets == SELECT_NORMAL] # Set 2 class as train dataset.\n",
-    "\n",
-    "train_loader = torch.utils.data.DataLoader(\n",
-    "    dataset     = trainset, batch_size  = BATCH_SIZE,\n",
-    "    shuffle     = True,num_workers = 2)\n",
     "\n",
     "test_label = [2,4,6] # Define actual test class that we use\n",
     "actual_testdata = torch.isin(testset.targets, torch.tensor(test_label))\n",
@@ -95,6 +108,112 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee387102",
+   "metadata": {},
+   "source": [
+    "#### 데이터 증강 기법 사용 class "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "81204f1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GaussianNoise(nn.Module):\n",
+    "    def __init__(self, std=0.1):\n",
+    "        super().__init__()\n",
+    "        self.std = std\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if self.training:\n",
+    "            noise = x.data.new(x.size()).normal_(0, self.std)\n",
+    "            return x + noise\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0d8fd6fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 몇 배로 Augmentation을 할 것인지 알려주면 해당 배수만큼 Augmentation을 수행하는 클래스\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomVerticalFlip(),\n",
+    "    transforms.RandomRotation(20),\n",
+    "    transforms.ToTensor(),\n",
+    "    GaussianNoise(0.1)\n",
+    "])\n",
+    "\n",
+    "class AugmentedDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, dataset, transform=None, augmentation_factor=1):\n",
+    "        '''\n",
+    "        dataset: 원본 데이터셋\\\n",
+    "        transform: 증강을 위한 transform\n",
+    "        augmentation_factor: 몇 배로 Augmentation\n",
+    "        '''\n",
+    "        self.dataset = dataset\n",
+    "        self.transform = transform\n",
+    "        self.augmentation_factor = augmentation_factor\n",
+    "        self.original_length = len(dataset)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        # 전체 데이터 수 = 원본 * 배수\n",
+    "        return self.original_length * self.augmentation_factor\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        # 원본 인덱스를 순환해서 접근\n",
+    "        original_idx = idx % self.original_length\n",
+    "        x, y = self.dataset[original_idx]\n",
+    "\n",
+    "        # 증강 적용\n",
+    "        if self.transform:\n",
+    "            x = self.transform(x)\n",
+    "\n",
+    "        return x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "15c358e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data size: 96000 Val data size: 4800 Test data size: 3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데이터셋을 먼저 train과 val로 나누고, train에 대해서만 증강을 적용\n",
+    "n_val = int(len(trainset) * 0.2)\n",
+    "n_train = len(trainset) - n_val\n",
+    "\n",
+    "trainset, valset = torch.utils.data.random_split(trainset, [n_train, n_val], generator=torch.Generator().manual_seed(2025))\n",
+    "\n",
+    "trainset = AugmentedDataset(trainset, transform=transform, augmentation_factor=5)\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "    dataset     = trainset, batch_size  = BATCH_SIZE,\n",
+    "    shuffle     = True,num_workers = 2)\n",
+    "\n",
+    "val_loader = torch.utils.data.DataLoader(\n",
+    "    dataset     = valset, batch_size  = BATCH_SIZE,\n",
+    "    shuffle     = False,num_workers = 2)\n",
+    "\n",
+    "# data size check\n",
+    "print(\"Train data size:\", len(trainset),\"Val data size:\", len(valset),\"Test data size:\", len(testset))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d187298",
    "metadata": {},
    "source": [
@@ -103,37 +222,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9a5967be",
+   "execution_count": 9,
+   "id": "d7be92ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.autoencoder import Autoencoder,Autoencoder2D\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "model = Autoencoder2D().to(DEVICE) # Autoencoder2D is used for 2D data.\n",
-    "criterion = nn.MSELoss()\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=LEARNING_RATE) # AdamW optimizer is used.\n"
+    "class EaryStopping():\n",
+    "    def __init__(self, patience=10, verbose=False, delta=0):\n",
+    "        '''\n",
+    "        patience (int): 얼마나 기다릴지\n",
+    "        verbose (bool): True일 경우 각 epoch의 loss 출력\n",
+    "        delta (float): 개선이 되었다고 인정되는 최소한의 loss\n",
+    "        '''\n",
+    "        self.patience = patience\n",
+    "        self.verbose = verbose\n",
+    "        self.counter = 0\n",
+    "        self.best_score = None\n",
+    "        self.early_stop = False\n",
+    "        self.val_loss_min = np.Inf\n",
+    "        self.delta = delta\n",
+    "\n",
+    "    def __call__(self, val_loss, model):\n",
+    "        score = -val_loss # validation loss가 작을수록 좋다고 가정\n",
+    "\n",
+    "        if self.best_score is None:\n",
+    "            self.best_score = score\n",
+    "            self.save_checkpoint(val_loss, model)\n",
+    "        elif score < self.best_score + self.delta:\n",
+    "            self.counter += 1\n",
+    "            if self.verbose:\n",
+    "                print(f'EarlyStopping counter: {self.counter} out of {self.patience}')\n",
+    "            if self.counter >= self.patience:\n",
+    "                self.early_stop = True\n",
+    "        else:\n",
+    "            self.best_score = score\n",
+    "            self.save_checkpoint(val_loss, model)\n",
+    "            self.counter = 0\n",
+    "\n",
+    "    def save_checkpoint(self, val_loss, model):\n",
+    "        '''validation loss가 감소하면 모델을 저장한다.'''\n",
+    "        if self.verbose:\n",
+    "            print(f'Validation loss decreased ({self.val_loss_min:.6f} --> {val_loss:.6f}).  Saving model ...')\n",
+    "        torch.save(model.state_dict(), 'checkpoint.pt')\n",
+    "        self.val_loss_min = val_loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e343ac8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(autoencoder, train_loader):\n",
-    "    autoencoder.train()\n",
-    "    for step, (x, label) in enumerate(train_loader):\n",
-    "        x = x.view(-1, 28*28).to(DEVICE)\n",
-    "        y = x.view(-1, 28*28).to(DEVICE) \n",
-    "\n",
-    "        encoded, decoded = autoencoder(x)\n",
-    "\n",
-    "        loss = criterion(decoded, y) \n",
-    "        optimizer.zero_grad() \n",
-    "        loss.backward()\n",
-    "        optimizer.step() "
+    "class TrainSelector():\n",
+    "    def __init__(self, model, is_2d=True):\n",
+    "        self.model = model\n",
+    "        self.is_2d = is_2d\n",
+    "    \n",
+    "    def __call__(self, train_loader, optimizer, criterion):\n",
+    "        if self.is_2d:\n",
+    "            return self._train2d(self.model, train_loader,optimizer,criterion)\n",
+    "        else:\n",
+    "            return self._train1d(self.model, train_loader,optimizer,criterion)\n",
+    "    def _train2d(model, train_loader, optimizer, criterion):\n",
+    "        model.train()\n",
+    "        train_loss = 0\n",
+    "        for data, _ in train_loader:\n",
+    "            data = data.to(DEVICE)\n",
+    "            optimizer.zero_grad()\n",
+    "            output = model(data)\n",
+    "            loss = criterion(output, data)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            train_loss += loss.item()\n",
+    "        return train_loss / len(train_loader) # Average loss per batch\n",
+    "    \n",
+    "    def _train1d(model,train_loader,optimizer,criterion):\n",
+    "        model.train()\n",
+    "        train_loss = 0\n",
+    "        for data, _ in train_loader:\n",
+    "            data = data.to(DEVICE).view(-1, 28*28) # Flatten 2D data to 1D\n",
+    "            optimizer.zero_grad()\n",
+    "            output = model(data)\n",
+    "            loss = criterion(output, data)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            train_loss += loss.item()\n",
+    "        return train_loss / len(train_loader) # Average loss per batch\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a36d91f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model.autoencoder import Autoencoder2D, Autoencoder\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "model = Autoencoder2D().to(DEVICE) # Autoencoder2D is used for 2D data.\n",
+    "Criterion = nn.MSELoss() # Mean Squared Error is used as loss function.\n",
+    "Optimizer = torch.optim.AdamW(model.parameters(), lr=LEARNING_RATE) # AdamW optimizer is used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6d50c72",
+   "metadata": {},
+   "source": [
+    "### Training"
    ]
   },
   {
@@ -141,18 +339,36 @@
    "execution_count": null,
    "id": "148c26c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'SummaryWriter' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Training process\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m writer = \u001b[43mSummaryWriter\u001b[49m()\n\u001b[32m      3\u001b[39m early_stopping = EaryStopping(patience=\u001b[32m10\u001b[39m, verbose=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      4\u001b[39m train_selector = TrainSelector(model, is_2d=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'SummaryWriter' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Training process including visualization\n",
-    "for epoch in range(1, EPOCH+1):\n",
-    "    train(autoencoder, train_loader)\n",
+    "# Training process\n",
+    "writer = SummaryWriter()\n",
+    "early_stopping = EaryStopping(patience=10, verbose=True)\n",
+    "train_selector = TrainSelector(model, is_2d=True)\n",
     "\n",
-    "    test_x = view_data.to(DEVICE)\n",
-    "    _, decoded_data = autoencoder(test_x)\n",
+    "for epoch in range(EPOCH):\n",
+    "    train_loss = train_selector(train_loader, Optimizer, Criterion)\n",
+    "    val_loss = train_selector(val_loader, Optimizer, Criterion)\n",
+    "    writer.add_scalars('Loss', {'train': train_loss, 'val': val_loss}, epoch)\n",
+    "    early_stopping(val_loss, model)\n",
+    "    if early_stopping.early_stop:\n",
+    "        print(\"Early stopping\")\n",
+    "        break\n",
     "\n",
-    "    f, a = plt.subplots(2, len(test_label), figsize=(len(test_label), 2))\n",
-    "    print(\"[Epoch {}]\".format(epoch))\n",
-    "    "
+    "model.load_state_dict(torch.load('checkpoint.pt'))\n",
+    "writer.close()    "
    ]
   },
   {
@@ -179,7 +395,7 @@
     "    x = x.view(-1, 28*28).to(DEVICE)\n",
     "    y = x.view(-1, 28*28).to(DEVICE) \n",
     "\n",
-    "    encoded, decoded = autoencoder(x)\n",
+    "    encoded, decoded = model(x)\n",
     "    loss = float(criterion(decoded, y).cpu().detach().numpy())\n",
     "    dic_loss['id'].append(step)\n",
     "    dic_loss['label'].append(int(label==SELECT_NORMAL)) # 1: normal, 0: abnormal\n",
@@ -275,7 +491,7 @@
     "# Do not forget to submit the .csv file to kaggle. If you upload .csv file properly to kaggle, you can check your result immediately at the leaderboard.\n",
     "teamnumber = 8 # insert your teamnumber\n",
     "df.to_csv(\"result_team{}.csv\".format(teamnumber), index =False) # Index should be not included in the .csv file.\n",
-    "torch.save(autoencoder.state_dict(), 'model_team{}.pth'.format(teamnumber))"
+    "torch.save(model.state_dict(), 'model_team{}.pth'.format(teamnumber))"
    ]
   },
   {
