--- a/ad-poject/training.ipynb
+++ b/ad-poject/training.ipynb
@@ -136,18 +136,19 @@
    "source": [
     "# 몇 배로 Augmentation을 할 것인지 알려주면 해당 배수만큼 Augmentation을 수행하는 클래스\n",
     "transform = transforms.Compose([\n",
-    "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.RandomVerticalFlip(),\n",
-    "    transforms.RandomRotation(20),\n",
-    "    GaussianNoise(0.1)\n",
+    "    transforms.RandomHorizontalFlip(p=0.5),\n",
+    "    transforms.RandomVerticalFlip(p=0.5),\n",
+    "    transforms.RandomRotation(15),                  # 20도는 좀 크고, 15도 이하 권장\n",
+    "    transforms.RandomCrop(28, padding=2),           # shift 효과\n",
+    "    GaussianNoise(0.1),                          # Gaussian Noise 추가  \n",
     "])\n",
     "\n",
     "class AugmentedDataset(torch.utils.data.Dataset):\n",
     "    def __init__(self, dataset, transform=None, augmentation_factor=1):\n",
     "        '''\n",
-    "        dataset: 원본 데이터셋\\\n",
+    "        dataset: 원본 데이터셋\n",
     "        transform: 증강을 위한 transform\n",
-    "        augmentation_factor: 몇 배로 Augmentation\n",
+    "        augmentation_factor: 몇 배로 Augmentation (1 포함)\n",
     "        '''\n",
     "        self.dataset = dataset\n",
     "        self.transform = transform\n",
@@ -159,20 +160,21 @@
     "        return self.original_length * self.augmentation_factor\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        # 원본 인덱스를 순환해서 접근\n",
+    "        # 원본 인덱스\n",
     "        original_idx = idx % self.original_length\n",
     "        x, y = self.dataset[original_idx]\n",
     "\n",
-    "        # 증강 적용\n",
-    "        if self.transform:\n",
-    "            x = self.transform(x)\n",
-    "\n",
-    "        return x, y"
+    "        # factor == 1 이거나 첫 번째 패스는 원본 사용\n",
+    "        if self.augmentation_factor > 1 and idx >= self.original_length:\n",
+    "            if self.transform:\n",
+    "                x = self.transform(x)\n",
+    "        \n",
+    "        return x, y\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "15c358e4",
    "metadata": {},
    "outputs": [
@@ -188,7 +190,7 @@
     "# 데이터셋을 먼저 train과 val로 나누고, train에 대해서만 증강을 적용\n",
     "n_val = int(len(trainset) * 0.2)\n",
     "n_train = len(trainset) - n_val\n",
-    "BATCH_SIZE = 128\n",
+    "BATCH_SIZE = 1024\n",
     "\n",
     "augset, valset = torch.utils.data.random_split(trainset, [n_train, n_val], generator=torch.Generator().manual_seed(2025))\n",
     "\n",
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e343ac8d",
    "metadata": {},
    "outputs": [],
@@ -345,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a36d91f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.autoencoder import Autoencoder2D, Autoencoder\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
-    "model = Autoencoder2D().to(DEVICE) # Autoencoder2D is used for 2D data.\n",
+    "\n",
+    "torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
     "\n",
     "EPOCH = 1000\n",
     "LEARNING_RATE = 0.0001\n",
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "148c26c0",
    "metadata": {},
    "outputs": [
@@ -768,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "30e3d524",
    "metadata": {},
    "outputs": [],
@@ -791,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "69c634e3",
    "metadata": {},
    "outputs": [
@@ -824,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a4d7cb92",
    "metadata": {},
    "outputs": [
@@ -862,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c5e971b2",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "65a46acf-7944-4bf9-9a04-c911c3973fba",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "12310bc9",
    "metadata": {},
    "outputs": [],
